libcm4all-was (1.22) unstable; urgency=low

  * multi: simple MultiWAS implementation

 --   

libcm4all-was (1.21) unstable; urgency=low

  * simple: add was_simple_new_fds()
  * protocol: extension for multiple WAS connections to one server process

 -- Max Kellermann <mk@cm4all.com>  Thu, 26 Aug 2021 09:50:56 +0200

libcm4all-was (1.20) unstable; urgency=low

  * simple: make several parameters "const"
  * meson.build: add option to disable the libapreq2 module
  * meson.build: add option to disable the libcore-xios implementation

 -- Max Kellermann <mk@cm4all.com>  Wed, 28 Apr 2021 18:25:47 +0200

libcm4all-was (1.19) unstable; urgency=low

  * simple: make the response end optional in was_simple_splice_all()

 -- Max Kellermann <mk@cm4all.com>  Thu, 27 Aug 2020 16:10:36 +0200

libcm4all-was (1.18) unstable; urgency=low

  * simple: add was_simple_splice(), was_simple_splice_all()

 -- Max Kellermann <mk@cm4all.com>  Mon, 24 Aug 2020 15:10:37 +0200

libcm4all-was (1.17) unstable; urgency=low

  * simple: add was_simple_set_header_n()
  * simple: send headers without allocating memory
  * debian: use debhelper 12

 -- Max Kellermann <mk@cm4all.com>  Fri, 10 Jul 2020 12:22:39 +0200

libcm4all-was (1.16) unstable; urgency=low

  * simple: non-blocking accept, allows polling on the control socket
  * debian: remove the obsolete libinline dependency

 -- Max Kellermann <mk@cm4all.com>  Tue, 12 Nov 2019 13:05:14 +0100

libcm4all-was (1.15) unstable; urgency=low

  * simple: additional STOP checks in various public functions to fix recovery
  * simple: fix _input_poll() return value after PREMATURE
  * simple: auto-flush after _set_length()
  * simple: additional protocol error checks
  * enable compiler optimization
  * unit test

 -- Max Kellermann <mk@cm4all.com>  Mon, 18 Feb 2019 23:55:29 +0100

libcm4all-was (1.14) unstable; urgency=low

  * build with Meson and Ninja
  * all code is now covered by the Simplified BSD License (BSD-2-Clause)